content put and delete added